related tdf#165433: poppler: upgrade to 25.02.0

Downloaded from https://poppler.freedesktop.org/poppler-25.02.0.tar.xz

Change-Id: I22cf1bd4dc3d27cabd8ce291d3bafd962d3f45f7
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/182169
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
Tested-by: Jenkins
(cherry picked from commit 12c1596b0fd152399bed90f3d26014a32efc24e3)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/184639
Reviewed-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>
(cherry picked from commit 4d76de24b0f2a77008b8ba220cddb6048f9b01cb)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/194032
Reviewed-by: Michael Stahl <michael.stahl@collabora.com>
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
(cherry picked from commit eae3eb860f477d12870aefe9e9721d1207070fea)