external/poppler/inc/pch/precompiled_poppler.hxx
@@ -13,11 +13,11 @@
  manual changes will be rewritten by the next run of update_pch.sh (which presumably
  also fixes all possible problems, so it's usually better to use it).
 
- Generated on 2023-06-18 21:15:26 using:
- ./bin/update_pch external/poppler poppler --cutoff=1 --exclude:system --include:module --include:local
+ Generated on 2025-02-25 16:55:58 using:
+ ./bin/update_pch ./external/poppler poppler --cutoff=1 --exclude:system --include:module --include:local
 
  If after updating build fails, use the following command to locate conflicting headers:
- ./bin/update_pch_bisect ./external/poppler/inc/pch/precompiled_poppler.hxx "make external/poppler.build" --find-conflicts
+ ./bin/update_pch_bisect ././external/poppler/inc/pch/precompiled_poppler.hxx "make ./external/poppler.build" --find-conflicts
 */
 
 #include <sal/config.h>
@@ -55,9 +55,10 @@
 #include <cstdlib>
 #include <cstring>
 #include <ctime>
+#include <filesystem>
+#include <functional>
 #include <gbase64.h>
 #include <gbasename.h>
-#include <gdir.h>
 #include <gfile.h>
 #include <glibc.h>
 #include <gmem.h>
@@ -89,7 +90,6 @@
 #include <goo/JpegWriter.h>
 #include <goo/PNGWriter.h>
 #include <goo/TiffWriter.h>
-#include <goo/gdir.h>
 #include <goo/gfile.h>
 #include <goo/glibc.h>
 #include <goo/gmem.h>
