external/poppler/UnpackedTarball_poppler.mk
@@ -23,7 +23,6 @@ $(eval $(call gb_UnpackedTarball_add_patches,poppler,\
 	external/poppler/std_numbers.patch.1 \
 	external/poppler/clang-std-ranges.patch.1 \
 	external/poppler/poppler-config.patch.1 \
-	external/poppler/pch.patch.0 \
 ))
 
 ifneq ($(filter -fsanitize=%,$(CC)),)
